--- a/asterisk_config/extensions_custom.conf
+++ b/asterisk_config/extensions_custom.conf
@@ -11,29 +11,32 @@ same => n(first),TryExec(AGI(HNO/call_update.py,${CALL_IDENTIFIER},,,"appel_entr
 same => n,Set(CALLERID(name)=${IF($["${CALLER_NAME}" != ""]?${CALLER_NAME}:Appel entrant)})
 same => n,Set(CHANNEL(hangup_handler_push)=log-hangup,s,1)
 same => n,NoOp(Case ID is ${CALL_IDENTIFIER})
-same => n,Queue(10001000,,,,,,sub-queueconnect)
-
-same => n,Hangup()
+same => n,Queue(10001000,,,,10,,sub-queueconnect)
+same => n,Goto(Repondeur-Handler,${EXTEN},1)
 
 [log-hangup]
 exten => s,1,Set(ANSWERED_IFACE=${MEMBERINTERFACE})
 same => n,Set(AGENT_EXTEN=${CUT(ANSWERED_IFACE,/,2)})
 same => n,Set(POSTE_APPEL=${AGENT_EXTEN})
 same => n,NoOp(Hangup for case ${CALL_IDENTIFIER} | poste=${POSTE_APPEL} | billsec=${CDR(billsec)})
-same => n,TryExec(AGI(HNO/call_update.py,${CALL_IDENTIFIER},${POSTE_APPEL},${CDR(billsec)}))
+same => n,ExecIf($["${POSTE_APPEL}" = ""]?TryExec(AGI(HNO/call_update.py,${CALL_IDENTIFIER},,${CDR(billsec)},"aucune_reponse")))
+same => n,ExecIf($["${POSTE_APPEL}" != ""]?TryExec(AGI(HNO/call_update.py,${CALL_IDENTIFIER},${POSTE_APPEL},${CDR(billsec)})))
 same => n,NoOp(Update status: ${UPDATE_STATUS})
 same => n,Return()
 
 [HNO-Validation]
 exten => _X.,1,NoOp(Starting HNO time validation for ${EXTEN})
-same => n,GotoIfTime(09:00-23:00,mon-sun,*,*?valid)
-same => n,Answer()
+same => n,GotoIfTime(09:00-23:00,mon-fri,*,*?valid)
+same => n,Goto(Repondeur-Handler,${EXTEN},1)
+same => n(valid),Goto(received-calls,${EXTEN},first)
+same => n,Hangup()
+
+[Repondeur-Handler]
+exten => _X.,1,Answer()
 same => n,Set(MSGFILENAME=/var/spool/asterisk/recordings/hno-${STRFTIME(${EPOCH},,%Y%m%d-%H%M%S)}-${CALLERID(num)})
 same => n,Set(CHANNEL(hangup_handler_push)=hno-hangup,s,1)
 same => n,Playback(/var/lib/asterisk/agi-bin/HNO/hno_audio)
 same => n,Record(${MSGFILENAME}.wav,5,60,k)
-same => n,Hangup()
-same => n(valid),Goto(received-calls,${EXTEN},first)
 same => n,Hangup()
 
 [hno-hangup]
@@ -41,9 +44,8 @@ exten => s,1,NoOp(Call identifier is ${CALL_IDENTIFIER})
 same => n,AGI(HNO/call_hangup.py,${CALL_IDENTIFIER},,${CDR(billsec)},"aucune_reponse_hors_horaires",${MSGFILENAME}.wav)
 same => n,Return()
 
-
 [sub-queueconnect]
 exten => s,1,NoOp(Agent ${MEMBERINTERFACE} connected on case ${CALL_IDENTIFIER})
 same => n,Set(AGENT_EXTEN=${CUT(MEMBERINTERFACE,/,2)})
-same => n,TryExec(AGI(HNO/call_update.py,${CALL_IDENTIFIER},${AGENT_EXTEN},,,"appel_encours"))
+same => n,TryExec(AGI(HNO/call_update.py,${CALL_IDENTIFIER},${AGENT_EXTEN},,"appel_encours"))
 same => n,Return()
